# blind-quill

./: .gitignore  DESIGN.md  README.md  app.py  core.py  model_client.py  observability.py  patcher.py  presenter.py  prompts.py  pyproject.toml  render.py  requirements.txt  schemas.py  story_store.py  utils.py
tests/: test_app_flow.py  test_model_client.py  test_observability_and_progress.py  test_patcher.py  test_schemas.py  test_story_store.py
web/: api.jsx  app.jsx  components.jsx  index.html  reveal.jsx  styles-views.css  styles.css  tweaks-panel.jsx  views.jsx
