[project]
name = "blind-quill"
version = "0.1.0"
description = "A hidden-canon story grafting game served as a Gradio Space."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate",
  "filelock",
  "gradio==6.16.0",
  "pydantic>=2",
  "safetensors",
  "spaces",
  "torch",
  "torchvision",
  "transformers",
]

[tool.uv]
package = false
